--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "robries",
   "version": "0.1.0",
+  "engines": {
+    "node": "18.12.1",
+    "npm": "7.24.1"
+  },
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.1",
