--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "robries",
   "version": "0.1.0",
   "engines": {
-    "node": "18.12.1",
+    "node": "16.x",
     "npm": "7.24.1"
   },
   "private": true,
@@ -12,6 +12,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.24.0",
+    "cors": "^2.8.5",
     "moment": "^2.29.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -19,7 +20,7 @@
     "react-redux": "^7.2.9",
     "react-router": "^6.0.2",
     "react-router-dom": "^5.3.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.1",
     "react-toastify": "^8.2.0",
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
@@ -27,7 +28,7 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts --openssl-legacy-provider start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
