--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "ajv": "^6.12.6",
     "axios": "^0.24.0",
     "cors": "^2.8.5",
     "moment": "^2.29.4",
